...
                        }) {
                            Icon(Icons.Default.Inventory2, contentDescription = stringResource(R.string.conversations_archived_content_description))
                        }
                    }
                    IconButton(
                        onClick = dropUnlessResumed { onOpenProfile() },
                        modifier = Modifier.testTag("conversation_list_profile_button"),
                    ) {
                        Icon(
                            Icons.Default.Person,
                            contentDescription = stringResource(R.string.conversations_profile_content_description),
                            modifier = Modifier
                                .size(28.dp)
...
