...
                    text = stringResource(R.string.backup_make_backup_button),
                    onClick = { onIntent(BackupIntent.RequestBackup) },
                    leadingIcon = Icons.Default.CloudUpload,
                    enabled = !state.isRestoring,
                    modifier = Modifier
                        .fillMaxWidth()
                        .testTag("backup_make_backup_button"),
                )
            }

            if (state.isRestoring) {
                Row(
                    modifier = Modifier.fillMaxWidth(),
...
